@@ -7,6 +7,8 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * CLEANED: handle command history per thread.
+
   * FIXED: handling of attributed variables in meta-calls.  Tom Schrijvers.
 
   * ADDED: set_prolog_OI/3 to handle interactive I/O from arbitrary
